# yt

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.md
app/: __init__.py  main.py
app/ai/: base.py  llm_gateway.py  llm_orchestrator.py  ollama_client.py  prompt_context_builder.py
app/config/: settings.py
app/core/: __init__.py  constants.py  enums.py  scoring.py  validation.py  wizard.py  workflow.py
app/db/: database.py  models.py  schema.py  (+2 more)
config/: rss_sources.json
docs/: PIPELINE_CANONICAL_FLOW.md  api_setup.md  architecture.md  content_strategy.md  copyright_safety.md  elevenlabs.md  external_tools.md  higgsfield.md  picsart.md  roadmap.md  workflow.md
exports/: README.md
outputs/: README.md
scripts/: run_streamlit.cmd  start_streamlit.py
tests/: test_exports.py  test_fact_quality_services.py  test_generated_idea_cards.py  test_hook_generation_service.py  test_idea_generation_service.py  test_iteration_d_voice_subtitles_render.py  test_iteration_e_external_tools.py  test_json_parsing.py  test_llm_providers.py  test_metadata_generation_service.py  test_nero_storyboard_engine.py  test_pipeline_spec.py  test_review_checklist.py  test_ronda3_higgsfield_render_canonical.py  test_safe_paths.py  test_scoring.py  test_script_generation_service.py  test_second_round_canonical_cleanup.py  test_stabilization_imports_settings.py  test_subtitles.py  test_title_generation_service.py  test_trend_providers.py  test_trend_research_service.py  test_trend_scoring_service.py  test_wizard.py  test_wizard_iteration_b.py  test_workflow.py
(+145 files in other folders)
